[package]
name = "hello_macro_derive"
version = "0.1.0"
authors = ["Ralf Northman <ralf.northman@bredband.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = "0.15.43"
syn_util = "0.3.0"
quote = "0.6.13"
proc-macro2 = "0.4.30"
